# salarios-precarios

./: .env  .env.example  Cargo.toml  api.http  docker-compose.yml  justfile  tailwind.config.js
migrations/2023-06-27-061521_create_reviews/: up.sql
migrations/2023-07-03-040729_create_places/: down.sql  up.sql
migrations/2023-07-04-001949_review_has_place/: down.sql  up.sql
migrations/2023-07-05-143431_create_users/: up.sql
migrations/2023-07-05-144039_review_has_user/: down.sql  up.sql
migrations/2023-07-10-032431_create_sessions/: up.sql
public/: output.css
src/: main.rs  models.rs  reviews_routes.rs  schema.rs
src/components/: hero.rs  layout.rs  mod.rs  reviews.rs
templates/: hero.html  layout.html  new_review.html  reviews.html
