[package]
name = "servicio-life"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
deadpool-diesel = { version = "0.4.1", features = ["postgres"] }
diesel = { version = "2.1.0", features = ["postgres"] }
dioxus = "0.3.2"
dioxus-ssr = "0.3.0"
dotenvy = "0.15.7"
serde = { version = "1.0.164", features = ["derive"] }
sqlx = { version = "0.6.3", features = ["postgres", "runtime-tokio-rustls", "any"] }
tokio = { version = "1.28.2", features = ["full"] }
