[package]
name = "servicio-life"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
axum-sessions = "0.5.0"
deadpool-diesel = { version = "0.4.1", features = ["postgres"] }
diesel = { version = "2.1.0", features = ["postgres"] }
dioxus = "0.3.2"
dioxus-ssr = "0.3.0"
dotenvy = "0.15.7"
oauth2 = "4.4.1"
rand = { version = "0.8.5", features = ["min_const_gen"] }
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.164", features = ["derive"] }
tokio = { version = "1.28.2", features = ["full"] }
tower-http = { version = "0.4.1", features = ["fs"] }
