[package]
name = "servicio-life"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12", default-features = false, features = ["with-axum", "mime", "mime_guess"] }
askama_axum = "0.3.0"
axum = "0.6.18"
axum-sessions = "0.5.0"
deadpool-diesel = { version = "0.4.1", features = ["postgres"] }
diesel = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15.7"
oauth2 = "4.4.1"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.164", features = ["derive"] }
tokio = { version = "1.28.2", features = ["full"] }
tower-http = { version = "0.4.1", features = ["fs"] }
